2003-04-28  Dodji  <dodji@seketeli.org>

	* tests/test7-main.c: woohoo, this now shows some text. 
	Okay, it is a crappy design sketch, but this is a milestone.

	* src/layeng/cr-lay-eng.c: store the created label widget in the cache.
	box content cache.
	* src/layeng/cr-box.h:created a box content cache to store the label 
	widget used to calculate text box size.
	
	* src/layeng/cr-box-view.[hc]: made this simpler and manage to
	make it show someting on the screen. Now the box view
	is just the view port. To render the box model, we just walk thru it
	and draw each box in the box view.
	

2003-04-26  dodji  <dodji@seketeli.org>
	
	* configure.in: made sure to include the libgnomeui clflags and
	 libsflags to croco libs and croco cflags when the layeng is turned
	 on.
	* csslint/Makefile.am: made sure to use the CROCO_LIBS and CROCO_CLFAGS
	 variables.
	* src/libcroco.h: added the cr-box-view.h include file
	* src/layeng/cr-box-view.c: started to write a draw_box() function that
	 will draw the box tree on the screen.
	* src/layeng/cr-lay-eng.c: removed the adjust_edges_on_inner_edge () function.
	* tests/Makefile.am: made sure to include libgnomeui clfags and libs
	 when layeng is turned on.
	* tests/test7-main.c: made started to include a cr-box-view.c test.

2003-04-20  dodji  <dodji@seketeli.org>

	* tests/test7-main.c: updated the test7 code to see the layout in
	action.

	* src/layeng/cr-style.[ch]: just modified some rule 
	names for convenience.

	* src/layeng/cr-lay-eng.[ch]:
	when forward in normal flow layout code. Have now very basic layout code.
	Still have to write a canvas code to render the layed out box.

        * src/layeng/cr-lay-eng.c (compute_text_box_inner_edge_size): started to work on the
	the inner edge size computation based on pango.

	* src/layeng/Makefile.am: updated to compile/link against libgnomeui.
	* configure.in: updated it to test the presence
	of libgnomeui if and only if the layout engine is enabled.
