@@ -31,5 +31,7 @@ cr-om-parser.c \
 
 libcroco_la_SOURCES= $(SRCS)
 
-INCLUDES=-I$(top_srcdir) -I$(top_srcdir)/intl `pkg-config --cflags glib-2.0` `pkg-config --cflags libxml-2.0` @LIBXML2_CFLAGS@
-libcroco_la_LDFLAGS=-version-info @LIBCROCO_VERSION_INFO@ @LIBXML2_LIBS@
+INCLUDES=-I$(top_srcdir) -I$(top_srcdir)/intl \
+@GLIB2_CFLAGS@
+libcroco_la_LDFLAGS=-version-info @LIBCROCO_VERSION_INFO@ \
+@GLIB2_CFLAGS@
